<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/purple_500"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/b_scn_week"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/second_week"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/b_fst_week"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_fst_week"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/first_week"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/b_scn_week"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/b_frday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:text="@string/friday"
                    android:textSize="10sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/b_stday"
                    app:layout_constraintStart_toEndOf="@+id/b_thday"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_mnday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/monday"
                    android:textSize="10sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/b_tuday"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_tuday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/tuesday"
                    android:textSize="10sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/b_wdday"
                    app:layout_constraintStart_toEndOf="@+id/b_mnday"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_wdday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/wednesday"
                    android:textSize="10sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/b_thday"
                    app:layout_constraintStart_toEndOf="@+id/b_tuday"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_thday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/thursday"
                    android:textSize="10sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/b_frday"
                    app:layout_constraintStart_toEndOf="@+id/b_wdday"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_stday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/saturday"
                    android:textSize="10sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toStartOf="@+id/b_snday"
                    app:layout_constraintStart_toEndOf="@+id/b_frday"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_snday"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:text="@string/sunday"
                    android:textSize="10sp"
                    android:typeface="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/b_stday"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/less_recycler_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:clipToPadding="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_condition"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/text_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/condition"
                app:layout_constraintEnd_toStartOf="@+id/text_condition_value"
                app:layout_constraintHorizontal_bias="0.529"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_condition_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/text_condition"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>